Proper error reporting when resolving xlinks